# Examples

RoboDK/Лаб1,2/: Лабораторная_12.rdk
RoboDK/Лаб1,2/Programs/: Full.src  Main.src  Rotate.src  letter_a.src  letter_d.src  letter_i.src  letter_m.src  letter_m_surname.src  letter_n_surname.src  letter_o_surname.src  letter_t_surname.src  letter_v.src  letter_v_surname.src  letter_ya_surnam.src
RoboDK/Лаб3,4/: task_1_name_surname_.py  task_2_turn_.py  task_3_scale_.py  task_4_order_.py  Лабораторная_34.rdk
RoboDK/Лаб3,4/Programs/: name_surname.src  order.src  scale.src  turn.src
RoboDK/Отчеты/: ДЗ.docx  ЛР_12.docx  ЛР_34.docx
amcl_manipulator/project_localization/: package.xml  setup.cfg  setup.py
amcl_manipulator/project_localization/config/: amcl_config.yaml  spots.txt
amcl_manipulator/project_localization/launch/: localization.launch.py
amcl_manipulator/project_localization/maps/: turtlebot_area.yaml
amcl_manipulator/project_localization/project_localization/: spots_to_file.py
amcl_manipulator/project_localization_interfaces/: CMakeLists.txt  package.xml
amcl_manipulator/project_localization_interfaces/srv/: MyServiceMessage.srv
amcl_manipulator/project_mapping/: package.xml  setup.cfg  setup.py
amcl_manipulator/project_mapping/config/: cartographer.lua
amcl_manipulator/project_mapping/launch/: cartographer.launch.py  map_server.launch.py
amcl_manipulator/project_mapping/maps/: turtlebot_area.pgm
amcl_manipulator/project_path_planning/: package.xml  setup.cfg  setup.py
amcl_manipulator/project_path_planning/config/: bt_navigator.yaml  controller.yaml  planner_server.yaml  spots.yaml
amcl_manipulator/test_1/: package.xml  setup.cfg
my_youbot/my_youbot/: setup.cfg  setup.py
test_1/: setup.py
test_1/config/: pointcloud_to_laserscan_params.yaml
test_1/install/: setup.bash
test_1/resource/: my_robot.urdf
(+54 files in other folders)
